ci: Correctly pass browser in tests workflow Lots of parameters including 'browser' is disabled when using the 'command' parameter https://github.com/cypress-io/github-action#custom-test-command

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -88,8 +88,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           install: false
-          browser: ${{ matrix.browser }}
-          command: yarn test:component:run --record --parallel
+          command: yarn test:component:run --record --parallel --browser ${{ matrix.browser }}
           working-directory: ui
           tag: ${{ github.event.name }} # Tag will be either "opened" or "synchronize"
           group: Tests in ${{ matrix.browser }} browser
