--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -1,7 +1,7 @@
 name: UI Tests
 
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize]
     branches:
       - 'dev'
@@ -88,16 +88,8 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           install: false
-          command: yarn test:component:run --record --parallel --browser ${{ matrix.browser }}
+          command: yarn test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
-          tag: ${{ github.event.name }} # Tag will be either "opened" or "synchronize"
-          group: Tests in ${{ matrix.browser }} browser
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }} # Dashboard record key as an environment variable
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # To allow accurately detecting a build vs a re-run build
-          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-          COMMIT_INFO_AUTHOR: ${{ github.event.pull_request.user.login }}
-          COMMIT_INFO_TIMESTAMP: ${{ github.event.pull_request.created_at }}
 
       - name: Add workflow summary
         env:
