ci: Do not use yarn install --focus to avoid errors --focus requires all packages to be published for some reason, but the vite-plugin playground is not.
pnpm --filter XYZ would have been useful here.

I have used this to save some time by avoiding to install packages for
other workspaces. But, it should not be a big deal now that we are
utilizing caching.

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -36,7 +36,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --focus
+        run: yarn
 
       - name: Build the package
         run: yarn build
@@ -78,7 +78,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --focus
+        run: yarn
 
       - name: Download build artifact
         uses: actions/download-artifact@v3
