--- a/icongenie/package.json
+++ b/icongenie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/icongenie",
-  "version": "2.5.4",
+  "version": "3.0.0",
   "description": "A Quasar tool for generating all your Quasar App's icons and splashscreens",
   "bin": {
     "icongenie": "./bin/icongenie.js"
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/quasarframework/quasar.git"
   },
   "engines": {
-    "node": "^24 || ^22 || ^20 || ^18 || ^16 || ^14.19"
+    "node": ">= 14.19.0"
   },
   "keywords": [
     "vuejs",
