feat(cli): upgrade all deps

--- a/cli/package.json
+++ b/cli/package.json
@@ -47,18 +47,18 @@
     "yarn": ">= 1.6.0"
   },
   "dependencies": {
-    "ci-info": "^3.7.1",
+    "ci-info": "^3.8.0",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.0",
+    "fs-extra": "^11.1.1",
     "http-proxy-middleware": "^2.0.6",
-    "kolorist": "^1.6.0",
-    "minimist": "^1.2.7",
-    "open": "8.4.0",
-    "route-cache": "0.4.7",
+    "kolorist": "^1.8.0",
+    "minimist": "^1.2.8",
+    "open": "^9.1.0",
+    "route-cache": "^0.5.0",
     "selfsigned": "^2.0.0",
     "update-notifier": "^6.0.2"
   },
