--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
-    "quasar": "./bin/quasar.js"
+    "quasar": "./bin/quasar"
   },
   "typings": "types/index.d.ts",
   "files": [
