--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@quasar/render-ssr-error",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "Renders SSR errors for Quasar CLI",
   "type": "module",
+  "main": "src/index.js",
   "module": "src/index.js",
   "scripts": {
     "lint": "eslint ./ --ext .js,.vue --fix",
@@ -33,6 +34,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "stack-trace": "^1.0.0-pre2"
+  },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
     "@quasar/extras": "^1.0.0",
@@ -49,8 +53,5 @@
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
-  },
-  "dependencies": {
-    "stack-trace": "^1.0.0-pre2"
   }
 }
