--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@quasar/fastclick": "1.1.5",
+    "@quasar/render-ssr-error": "^1.0.0",
     "@quasar/vite-plugin": "^1.3.1",
     "@rollup/pluginutils": "^4.1.2",
     "@types/chrome": "^0.0.208",
@@ -72,7 +73,6 @@
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
     "open": "^8.4.0",
-    "ouch": "^2.0.0",
     "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.5.4",
     "sass": "1.32.12",
