feat&fix(app-webpack): use our new SSR error handling package; avoid crash when SSR has error 500

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@quasar/babel-preset-app": "2.0.2",
+    "@quasar/render-ssr-error": "^1.0.0",
     "@quasar/fastclick": "1.1.5",
     "@quasar/ssr-helpers": "2.2.2",
     "@types/chrome": "^0.0.208",
@@ -87,11 +88,9 @@
     "node-loader": "2.0.0",
     "null-loader": "4.0.1",
     "open": "8.4.0",
-    "ouch": "^2.0.1",
     "postcss": "^8.4.4",
     "postcss-loader": "7.0.2",
     "postcss-rtlcss": "4.0.1",
-    "pretty-error": "4.0.0",
     "register-service-worker": "1.7.2",
     "sass": "1.32.12",
     "sass-loader": "13.2.0",
