feat(app-vite/app-webpack): Add the official SSL support for dev mode on Capacitor 4 support (#14226)

--- a/app-webpack/templates/capacitor/package.json
+++ b/app-webpack/templates/capacitor/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@capacitor/app": "^4.0.0",
     "@capacitor/cli": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/splash-screen": "^4.0.0"
+    "@capacitor/core": "^4.0.0"
   }
 }
