--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -90,7 +90,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           install: false
-          command: yarn test:component:run --browser ${{ matrix.browser }} --reporter json --reporter-option output=dist/test-results/${{ matrix.browser }}.json
+          command: yarn test:component:run --browser ${{ matrix.browser }} --reporter json --reporter-options output=dist/test-results/${{ matrix.browser }}.json
           working-directory: ui
 
       # Upload required artifacts to be used in tests-on-pr-report.yml
