ci: fix/improve test JSON reporting outputting to a file doesn't work as advertised, on top of that, https://glebbahmutov.com/blog/json-test-results/ mentions that using json reporter with output disables the usual terminal output

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -90,7 +90,9 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           install: false
-          command: yarn test:component:run --browser ${{ matrix.browser }} --reporter json --reporter-options output=dist/test-results/${{ matrix.browser }}.json
+          env:
+            CYPRESS_JSON_RESULTS_FILENAME=dist/test-results/${{ matrix.browser }}.json
+          command: yarn test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
 
       # Upload required artifacts to be used in tests-on-pr-report.yml
