--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -1,13 +1,15 @@
-name: UI Tests
+name: UI tests
 
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize]
     branches:
       - 'dev'
     paths:
-      - 'ui/**.js'
-      - '!.github/**'
+      - '.github/workflows/tests-on-pr.yml'
+      - 'ui/**/*.js'
+      - 'ui/package.json'
+      - 'ui/dev/package.json'
 
 jobs:
   build:
@@ -16,25 +18,41 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ui
-
-    name: Build the UI package
+    # Check if the build cache exists, and if it does, do nothing else.
+    # Otherwise, run the build and cache it.
+    name: Build the packages
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup node
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm i
+        run: yarn
 
-      - name: Build the package
-        run: npm run build
+      - name: Build the UI package
+        working-directory: ui
+        run: yarn build
+
+      - name: Upload UI build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ui-build
+          path: ui/dist
+
+      - name: Build vite-plugin package
+        working-directory: vite-plugin
+        run: yarn build
+
+      - name: Upload vite-plugin build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: vite-plugin-build
+          path: vite-plugin/dist
 
   tests:
     # If the build pipeline doesn't succeed, we don't need to run tests at all
@@ -46,6 +64,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ui
+
     strategy:
       fail-fast: false
       matrix:
@@ -56,46 +78,46 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup node
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: cd ./ui && npm i
+        run: yarn
+
+      - name: Download UI build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ui-build
+          path: ui/dist
+
+      - name: Download vite-plugin build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: vite-plugin-build
+          path: vite-plugin/dist
 
       - name: Run tests in ${{ matrix.browser }} browser
         uses: cypress-io/github-action@v5
         with:
-          browser: ${{ matrix.browser }}
-          command: npm run test:component:ci --record --parallel
+          install: false
+          env:
+            CYPRESS_JSON_RESULTS_FILENAME=dist/test-results/${{ matrix.browser }}.json
+          command: yarn test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
-          tag: ${{ github.event.name }} # Tag will be either "opened" or "synchronize"
-          group: Tests in ${{ matrix.browser }} browser
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }} # Dashboard record key as an environment variable
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # To allow accurately detecting a build vs a re-run build
-          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-          COMMIT_INFO_AUTHOR: ${{ github.event.pull_request.user.login }}
-          COMMIT_INFO_TIMESTAMP: ${{ github.event.pull_request.created_at }}
 
-      - name: Add workflow summary
-        env:
-          SUMMARY: |
-            Hi @${{ github.event.pull_request.user.login }} and thanks for the contribution! 👏
+      # Upload required artifacts to be used in tests-on-pr-report.yml
 
-            We've detected file changes inside the `ui` folder, so that triggered our Cypress component tests.
-        run: echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
-        if: always()
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results-${{ matrix.browser }}
+          path: ui/dist/test-results/${{ matrix.browser }}.json
 
-      - name: Output failure message
-        env:
-          FAILURE: ":bangbang: Seems like some of the tests are failing. Please amend 'em for someone from the team to be able to review it."
-        run: echo "$FAILURE" >> $GITHUB_STEP_SUMMARY
-        if: failure() || cancelled()
-
-      - name: Output success message
-        env:
-          SUCCESS: ':white_check_mark: Seems like all the tests passed successfully, so your PR is ready to be reviewed!'
-        run: echo "$SUCCESS" >> $GITHUB_STEP_SUMMARY
-        if: success()
+      - name: Upload GitHub Actions event data
+        uses: actions/upload-artifact@v3
+        with:
+          name: event-data
+          path: ${{ github.event_path }}
