--- a/ui/package.json
+++ b/ui/package.json
@@ -71,8 +71,8 @@
   },
   "homepage": "https://quasar.dev",
   "devDependencies": {
-    "@quasar/app-vite": "^1.2.0",
-    "@quasar/extras": "^1.15.11",
+    "@quasar/app-vite": "^1.3.0",
+    "@quasar/extras": "^1.16.3",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.3.3",
@@ -82,6 +82,7 @@
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
     "cypress": "^12.7.0",
+    "cypress-json-results": "^1.2.1",
     "diff": "^5.1.0",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^17.0.0",
