--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "ui"
   ],
   "scripts": {
-    "vite-ecosystem-ci:build": "yarn workspace @quasar/vite-plugin build",
+    "vite-ecosystem-ci:build": "yarn workspace @quasar/vite-plugin build && yarn workspace quasar test:build",
     "vite-ecosystem-ci:test": "yarn workspace @quasar/vite-plugin test",
-    "vue-ecosystem-ci:build": "yarn workspace quasar test:build && yarn workspace @quasar/vite-plugin build",
+    "vue-ecosystem-ci:build": "yarn vite-ecosystem-ci:build",
     "vue-ecosystem-ci:test": "yarn workspace quasar test:component:run && yarn workspace @quasar/vite-plugin test:e2e:ci"
   }
 }
