chore(vite-plugin): Use better build cleanup
https://github.com/quasarframework/quasar/commit/438b0fbe0986655d923b7f86faf3de0df90503f7#r112848212

--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "rm -rf ./dist/* && rollup --config rollup.config.js",
+    "build": "rm -rf ./dist/ && rollup --config rollup.config.js",
     "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "test": "yarn test:unit:ci && yarn test:e2e:ci",
     "test:unit:dev": "vitest",
