ci: Correctly generate and upload test results Turns out with.env needs to be on a single line, the path is relative to ui/dev, and it can't generate intermediate folders

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -103,8 +103,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           install: false
-          env:
-            CYPRESS_JSON_RESULTS_FILENAME=dist/test-results/${{ matrix.browser }}.json
+          env: CYPRESS_JSON_RESULTS_FILENAME=test-results-${{ matrix.browser }}.json
           command: yarn test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
 
@@ -115,7 +114,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results-${{ matrix.browser }}
-          path: ui/dist/test-results/${{ matrix.browser }}.json
+          path: ui/dev/test-results-${{ matrix.browser }}.json
 
       - name: Upload GitHub Actions event data
         if: ${{ always() }}
