--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -130,7 +130,7 @@
     }
   },
   "engines": {
-    "node": "^24 || ^22 || ^20 || ^18 || ^16 || ^14.19",
+    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18 || ^16",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   },
