--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -151,7 +151,7 @@
     }
   },
   "engines": {
-    "node": ">= 14.15",
+    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18 || ^16",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   },
