feat(app-vite): env dotfiles support #15303
Order matters!

.env                                # loaded in all cases
.env.local                          # loaded in all cases, ignored by git
.env.[dev|prod]                     # loaded for dev or prod only
.env.local.[dev|prod]               # loaded for dev or prod only, ignored by git
.env.[quasarMode]                   # loaded for specific Quasar CLI mode only
.env.local.[quasarMode]             # loaded for specific Quasar CLI mode only, ignored by git
.env.[dev|prod].[quasarMode]        # loaded for specific Quasar CLI mode and dev|prod only
.env.local.[dev|prod].[quasarMode]  # loaded for specific Quasar CLI mode and dev|prod only, ignored by git

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -60,6 +60,8 @@
     "compression": "^1.7.4",
     "cross-spawn": "^7.0.3",
     "dot-prop": "6.0.1",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "elementtree": "0.1.7",
     "esbuild": "^0.17.19",
     "express": "^4.17.3",
