--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -67,6 +67,8 @@
     "css-minimizer-webpack-plugin": "4.2.2",
     "cssnano": "5.1.14",
     "dot-prop": "6.0.1",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "elementtree": "0.1.7",
     "error-stack-parser": "2.1.4",
     "esbuild": "^0.17.19",
