--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-vite",
-  "version": "1.4.2",
+  "version": "2.0.0-alpha.1",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
     "quasar": "./bin/quasar"
