--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -57,7 +57,6 @@
     "archiver": "5.3.1",
     "autoprefixer": "10.4.14",
     "browserslist": "^4.12.0",
-    "chalk": "4.1.2",
     "chokidar": "3.5.3",
     "ci-info": "3.8.0",
     "compression-webpack-plugin": "10.0.0",
@@ -82,6 +81,7 @@
     "html-webpack-plugin": "5.5.1",
     "inquirer": "8.2.2",
     "isbinaryfile": "5.0.0",
+    "kolorist": "^1.8.0",
     "launch-editor-middleware": "2.6.0",
     "lodash": "^4.17.21",
     "log-update": "4.0.0",
