--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@quasar/render-ssr-error": "^1.0.1",
-    "@quasar/ssl-certificate": "/Users/razvan/work/v2/utils/ssl-certificate",
+    "@quasar/ssl-certificate": "^1.0.0",
     "@quasar/vite-plugin": "^1.3.3",
     "@rollup/pluginutils": "^4.1.2",
     "@types/chrome": "^0.0.208",
