--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -26,7 +26,8 @@
     "node": ">=12"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts ./ --fix"
+    "lint": "eslint --ext .js,.ts ./ --fix",
+    "create-test-project": "tsx scripts/create-test-project.ts"
   },
   "dependencies": {
     "fast-glob": "^3.2.11",
@@ -37,10 +38,12 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.6.7",
+    "@types/prompts": "^2.4.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.11.0",
     "eslint-plugin-lodash-template": "^0.21.0",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
 }
