--- a/ui/package.json
+++ b/ui/package.json
@@ -73,7 +73,7 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
     "@quasar/extras": "^1.16.4",
-    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.1.0",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0-alpha.1",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.3.3",
     "autoprefixer": "^10.4.13",
@@ -81,7 +81,7 @@
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "cypress": "^12.7.0",
+    "cypress": "^12.13.0",
     "cypress-json-results": "^1.2.1",
     "diff": "^5.1.0",
     "eslint": "^8.41.0",
