ci: Correctly pass CYPRESS_JSON_RESULTS_FILENAME
When passing it via with.env, Cypress either adds another CYPRESS_ prefix or only makes it available to Cypress.env() command

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -101,9 +101,10 @@ jobs:
 
       - name: Run tests in ${{ matrix.browser }} browser
         uses: cypress-io/github-action@v5
+        env:
+          CYPRESS_JSON_RESULTS_FILENAME: test-results-${{ matrix.browser }}.json
         with:
           install: false
-          env: CYPRESS_JSON_RESULTS_FILENAME=test-results-${{ matrix.browser }}.json
           command: yarn test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
 
