refactor(vite-plugin): port to ESM -- also offer cjs entry point

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@quasar/extras",
     "vite-plugin",
     "vite-plugin/playground",
+    "utils/render-ssr-error",
+    "utils/ssl-certificate",
     "ui"
   ],
   "scripts": {
