--- a/docs/package.json
+++ b/docs/package.json
@@ -21,7 +21,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.3.0",
+    "@quasar/app-vite": "^2.0.0-alpha.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
