--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-monorepo",
   "private": true,
   "packageManager": "yarn@1.22.19",
-  "//": "Currently, workspaces feature is only used for Vite/Vue Ecosystem CIs, so not all packages are included. Use individual folders for usual development.",
+  "//": "Not all packages are included. Use individual folders for usual development of everything else.",
   "workspaces": [
     "app-vite",
     "@quasar/extras",
@@ -10,9 +10,11 @@
     "vite-plugin/playground",
     "utils/render-ssr-error",
     "utils/ssl-certificate",
-    "ui"
+    "ui",
+    "docs"
   ],
   "scripts": {
+    "test": "yarn vite-ecosystem-ci:build && yarn vite-ecosystem-ci:test && yarn vue-ecosystem-ci:test",
     "vite-ecosystem-ci:build": "yarn workspace @quasar/vite-plugin build && yarn workspace quasar test:build",
     "vite-ecosystem-ci:test": "yarn workspace @quasar/vite-plugin test",
     "vue-ecosystem-ci:build": "yarn vite-ecosystem-ci:build",
