feat(docs): transform to ESM

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -4,7 +4,7 @@
 node_modules
 /dist
 /public/examples/
-/public/quasar-api/*.json
+/public/quasar-api
 /src-cordova/node_modules
 /src-cordova/platforms
 /src-cordova/plugins
