--- a/docs/package.json
+++ b/docs/package.json
@@ -5,10 +5,12 @@
   "productName": "quasar-docs",
   "author": "Razvan Stoenescu <razvan.stoenescu@gmail.com>",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "quasar dev",
-    "dev:ssr": "quasar dev -m ssr",
-    "build": "node build/search.js && cp node_modules/quasar/dist/api/* public/quasar-api/ && quasar build -m ssr && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/",
+    "prepare": "node build/copy-quasar-api.js",
+    "dev": "yarn prepare && quasar dev",
+    "dev:ssr": "yarn prepare && quasar dev -m ssr",
+    "build": "yarn prepare && node build/search.js && quasar build -m ssr && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/",
     "relnotes": "node build/release-notes/index.js",
     "lint": "eslint --ext .js,.vue ./ --fix",
     "test": "echo \"No test specified\" && exit 0"
