--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,7 @@
     "prepare": "node build/copy-quasar-api.js",
     "dev": "yarn prepare && quasar dev",
     "dev:ssr": "yarn prepare && quasar dev -m ssr",
-    "build": "yarn prepare && node build/search.js && quasar build -m ssr && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/",
+    "build": "yarn prepare && node build/search.js && quasar build -m ssr && node build/fix-ssr-manifest.js && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/",
     "relnotes": "node build/release-notes/index.js",
     "lint": "eslint --ext .js,.vue ./ --fix",
     "test": "echo \"No test specified\" && exit 0"
