fix(vite-plugin): add types to the conditional export mapping

--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./src/index.js",
       "require": "./dist/index.cjs"
     },
