ci: fix release notes workflow with correct ESM usage

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -29,7 +29,7 @@ jobs:
           script: |
             const { mkdir, writeFile } = require('node:fs/promises');
             const { join } = require('node:path');
-            const markdown = await import('./docs/build/release-notes/md.mjs');
+            const { default: markdown } = await import('${{ github.workspace }}/docs/build/release-notes/md.mjs');
 
             /**
             * `/[\w/\-@]+/` is the name of the package. (e.g. @quasar/app-vite)
