--- a/.github/workflows/project-creation-tests.yml
+++ b/.github/workflows/project-creation-tests.yml
@@ -162,7 +162,7 @@ jobs:
             }
 
         run: |
-          ${{ matrix.package-manager }} run dev &
+          ${{ matrix.package-manager }} run dev --port 9000 &
           echo $WAIT_ON_CONFIG > wait-on.json
           npx wait-on@7.0.1 --config wait-on.json --timeout 5000 http-get://127.0.0.1:9000
           kill $!
