ci: pass wait-on config only when using Vite otherwise it seems to break Webpack

--- a/.github/workflows/project-creation-tests.yml
+++ b/.github/workflows/project-creation-tests.yml
@@ -153,7 +153,7 @@ jobs:
       - name: Test the development server
         working-directory: create-quasar/test-project
         env:
-          # https://github.com/jeffbski/wait-on/issues/78#issuecomment-867813529
+          # For Vite, see https://github.com/jeffbski/wait-on/issues/78#issuecomment-867813529
           WAIT_ON_CONFIG: |
             {
               "headers": {
@@ -163,6 +163,10 @@ jobs:
 
         run: |
           ${{ matrix.package-manager }} run dev --port 9000 &
-          echo $WAIT_ON_CONFIG > wait-on.json
+
+          if [ '${{ matrix.app-engine }}' = 'vite' ]; then
+            echo $WAIT_ON_CONFIG > wait-on.json
+          fi
+
           npx wait-on@7.0.1 --config wait-on.json --timeout 5000 http-get://127.0.0.1:9000
           kill $!
