ci: increase dev server timeout for webpack even more, again

--- a/.github/workflows/project-creation-tests.yml
+++ b/.github/workflows/project-creation-tests.yml
@@ -168,7 +168,8 @@ jobs:
             echo $WAIT_ON_CONFIG > wait-on.json
             npx wait-on@7.0.1 --config wait-on.json --timeout 5000 http-get://127.0.0.1:9000
           else
-            npx wait-on@7.0.1 --timeout 15000 http-get://127.0.0.1:8080
+            # 15s is almost enough, but due to possible fluctuations in the CI environment, we set it higher than that
+            npx wait-on@7.0.1 --timeout 20000 http-get://127.0.0.1:8080
           fi
 
           kill $!
