ci: add Node v20 to the matrix

--- a/.github/workflows/project-creation-tests.yml
+++ b/.github/workflows/project-creation-tests.yml
@@ -68,7 +68,7 @@ jobs:
       matrix:
         script-type: [js, ts]
         app-engine: [vite, webpack]
-        node-version: [16, 18]
+        node-version: [16, 18, 20]
         package-manager: [yarn, npm, pnpm]
 
     name: Test ${{ matrix.script-type }}-${{ matrix.app-engine }} (Node v${{ matrix.node-version }} - ${{ matrix.package-manager }})
