fix: correctly set the supported Node versions in engines field

--- a/docs/package.json
+++ b/docs/package.json
@@ -42,7 +42,7 @@
     "workbox-build": "^7.0.0"
   },
   "engines": {
-    "node": ">= 14.19.0",
+    "node": "^20 || ^18 || ^16",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   }
