--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -99,7 +99,7 @@
     "ts-loader": "9.4.2",
     "typescript": "4.9.4",
     "url-loader": "4.1.1",
-    "vue-loader": "17.0.1",
+    "vue-loader": "^17.1.1",
     "vue-style-loader": "4.1.3",
     "webpack": "^5.58.1",
     "webpack-bundle-analyzer": "4.7.0",
